<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_bringup</name>
  <version>0.1.3</version>
  <description>Bringup scripts and configurations for the navigation2 stack</description>
  <maintainer email="michael.jeronimo@intel.com">Michael Jeronimo</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
<exec_depend>launch_ros</exec_depend>
  <exec_depend>navigation2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
